--- a/src/Assets/styles/_speech.scss
+++ b/src/Assets/styles/_speech.scss
@@ -18,10 +18,10 @@
     text-align: left;
     height: 100%;
 
-    .title {
-      // justify-self: flex-end;
-      // align-self: flex-end;
-    }
+    // .title {
+    //   // justify-self: flex-end;
+    //   // align-self: flex-end;
+    // }
     .copy-container {
       // position: relative;
       display: flex;
